[gd_scene load_steps=7 format=3 uid="uid://ldxyhu3wx7pb"]

[ext_resource type="Texture2D" uid="uid://b2sums8eodtkh" path="res://assets/bg.png" id="1_3qtd4"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_7ps6e"]
[ext_resource type="PackedScene" uid="uid://c0e1n4l13nxor" path="res://scenes/bird.tscn" id="2_6cmln"]
[ext_resource type="PackedScene" uid="uid://c2euh1m6i5iix" path="res://scenes/pipes.tscn" id="2_p17lf"]
[ext_resource type="PackedScene" uid="uid://dehpro4h0ub2m" path="res://scenes/ground.tscn" id="4_3ihk3"]
[ext_resource type="PackedScene" uid="uid://bg8bq1ra13tdc" path="res://scenes/game_over.tscn" id="6_6qxhg"]

[node name="Main" type="Node"]
script = ExtResource("1_7ps6e")
pipe_scene = ExtResource("2_p17lf")

[node name="Bird" parent="." instance=ExtResource("2_6cmln")]
z_index = 1
position = Vector2(345, 140)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(432, 384)
texture = ExtResource("1_3qtd4")

[node name="Ground" parent="." instance=ExtResource("4_3ihk3")]
z_index = 1

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="InputTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("6_6qxhg")]

[connection signal="body_entered" from="Ground" to="." method="_on_ground_body_entered"]
[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
